src/styles/main.scss
body {
  background: #d9d9d9;
  clear:both;

  .paginated-list {
    width: 65%;
    min-width: 35em;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1.7em;
  }
}

.assets-list {

  .asset-row {
    background: white;
    height: 5.6em;
    box-sizing: border-box;
    padding: 0.3em;
    padding-left: 1.6em;
    padding-right: 0.8em;
    margin-bottom: 0.12em;

    .add-button {
      height: 100%;
      width: 5.5em;
      float: right;
      color: white;
      background: linear-gradient(160deg, #5be4f1, #21afc7);
      text-align: center;

      &:hover {
        background: radial-gradient(#5be4f1, #21afc7);
      }
    }

    .asset-details {
      color: #777777;
      height: 95%;
      box-sizing: border-box;
      padding-top: 0.9em;

      .small-text {
        font-size: 0.7em;
        color: #9c9c9c;
      }

      .location-info, .asset-type, .impression-cost {
        height: 100%;
        display: inline-block;
      }

      .location-info {
        margin-right: 1.3em;
        float: left;
        font-weight: 400;
        width: 25%;

        .lat-long {
          font-weight: 400;
          padding-bottom: 0.4em;
        }
      }

      .asset-type {
        color: #909ea0;
        font-size: 0.9em;
        font-weight: 100;
        margin-right: 4em;
        float:left;
        line-height: 3.8em;
      }

      .impression-cost {
        font-weight: 300;
        float: right;
        margin-right: 1.5em;
        margin-top: 0.2em;

        .price {
          font-size: 1.4em;
          color: #21afc7;
        }
      }
    }
  }
}

